--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "server:dev": "cd ./packages/server && yarn dev"
+  },
   "devDependencies": {
     "lerna": "^3.13.0"
   }
