--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "server:dev": "cd ./packages/server && yarn dev"
+    "server:dev": "cd ./packages/server && yarn dev",
+    "client:dev": "cd ./packages/client && yarn start"
   },
   "devDependencies": {
     "lerna": "^3.13.0"
