--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "http-status-codes": "^1.3.0",
     "mongoose": "^5.4.15",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
@@ -39,6 +40,7 @@
     "@types/passport": "^1.0.0",
     "@types/passport-github": "^1.1.4",
     "@types/pino": "^5.20.0",
+    "@types/supertest": "^2.0.7",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
     "morgan": "^1.9.1",
